--- a/ACC/Views/Reviews/PartialViews/_CreateReviewPartialView.cshtml
+++ b/ACC/Views/Reviews/PartialViews/_CreateReviewPartialView.cshtml
@@ -32,10 +32,11 @@
                     </div>
 
                     <div class="form-group">
-                        <label>Select Folders and Documents</label>
+                        <label>Select Documents</label>
                         <div style="max-height: 300px; overflow-y: auto; border: 1px solid #ccc; padding: 10px;">
                             <partial name="_FolderWithDocTree" model="Model.AllFolders">
                         </div>
+                        <span asp-validation-for="SelectedWorkflowId" class="text-danger"></span>
                     </div>
 
                 
