--- a/ACC/Views/Shared/_ProjectLayout.cshtml
+++ b/ACC/Views/Shared/_ProjectLayout.cshtml
@@ -175,15 +175,15 @@
                 <li class="nav-item">
                     <a asp-controller="ProjectIssue" asp-action="Index" asp-route-id="@id" class="nav-link text-dark">
                         <div class="nav-link-content">
-                            <i class="fa-solid fa-bug me-2 text-danger"></i>
-                            <span class="fw-semibold">Project Issues</span>
+                            <i class="fa-solid fa-bug me-3"></i>
+                            <span>Project Issues</span>
                         </div>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a asp-controller="Reviews" asp-action="Index" asp-route-id="@id" class="nav-link text-dark">
                         <div class="nav-link-content">
-                            <i class="fa-solid fa-building me-3"></i>
+                            <i class="fa-solid fa-clipboard-check me-3"></i>
                             <span>Reviews</span>
                         </div>
                     </a>
