--- a/ACC/Views/ProjectMembers/Index.cshtml
+++ b/ACC/Views/ProjectMembers/Index.cshtml
@@ -45,6 +45,7 @@
                     <div class="d-flex">
                     <form method="get" class="d-flex" >
                               <input type="text" class="form-control me-2" name="search" placeholder="Search by name" value="@searchQuery" />
+                        <input type="hidden" name="ProjectId" value="@ProjId" />
                               <button type="submit" class="btn btn-primary">Search</button>
                     </form>
                     </div>
